--- a/admin/package.json
+++ b/admin/package.json
@@ -28,6 +28,7 @@
     "@angular/upgrade": "4.0.1",
     "@ngui/auto-complete": "^0.13.3",
     "@swimlane/ngx-datatable": "^9.3.0",
+    "@types/fullcalendar": "^2.7.44",
     "angular-calendar": "0.11.0",
     "angular2-datatable": "0.6.0",
     "angular2-ladda": "1.2.0",
